--- a/MAIN/webpages/login.html
+++ b/MAIN/webpages/login.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <title>Guitar Tab Creator</title>
 
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<meta name="google-signin-client_id" content="209234124790-fnudm840ih0pr6l645g3hco0tq6l2igj.apps.googleusercontent.com">
+
 <link rel="stylesheet" type="text/css" href="./css/login.css">
 <link href="https://fonts.googleapis.com/css?family=Neuton:800|Open+Sans:400,700" rel="stylesheet">
 
@@ -10,11 +13,10 @@
     <div id='loginbox' class='item1'>
 
       <h1 class='heading'>Sign In</h1>
-      <!-- <div id="googlebutton" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark" data-width="250" data-height="50" data-longtitle="true"></div> -->
       <p>If you don't have a Google account, you can make one by clicking the button below.
       </br> Or sign is as a
       guest with the 'Sign in as Guest' button.</p>
-
+      <div id="googlebutton" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark" data-width="250" data-height="50" data-longtitle="true"></div>
     </div>
 
 
