--- a/webpages/login.html
+++ b/webpages/login.html
@@ -2,12 +2,13 @@
 <title>Guitar Tab Creator</title>
 
 <script src="https://apis.google.com/js/platform.js" async defer></script>
-<meta name="google-signin-client_id" content="209234124790-fnudm840ih0pr6l645g3hco0tq6l2igj.apps.googleusercontent.com">
+<meta name="google-signin-client_id" content="566769051678-k1mpvtssd5jin7p6bekdtv7g1r23qav4.apps.googleusercontent.com">
 
-<link rel="stylesheet" type="text/css" href="./css/login.css">
+<link rel="stylesheet" href="./css/login.css">
+<!-- <link rel="stylesheet" href="css/login.css" type="text/css"> -->
 <link href="https://fonts.googleapis.com/css?family=Neuton:800|Open+Sans:400,700" rel="stylesheet">
 
-<script src="./js/login.js"></script>
+<script src="./js/index.js"></script>
 
 <main>
   <div id='griddiv' class='grid-container'>
@@ -20,8 +21,6 @@
       guest with the 'Sign in as Guest' button.</p>
       <div id="googlebutton" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark" data-width="250" data-height="50" data-longtitle="true"></div>
     </div>
-
-
 
     <div id='logintext' class='item2'>
       <h1 class='heading'>Guitar Tablature Creator</h1>
