--- a/webpages/menu.html
+++ b/webpages/menu.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <title>Guitar Tab Creator</title>
 
-<link rel="stylesheet" type="text/css" href="./css/menu.css">
+<!-- <link rel="stylesheet" href="./css/menu.css" type="text/css"> -->
+<link rel="stylesheet" href="./css/menu.css">
 <link href="https://fonts.googleapis.com/css?family=Neuton:800|Open+Sans:400,700" rel="stylesheet">
 
 <main>
