server now calls login with css
big update things finally working

--- a/webpages/login.html
+++ b/webpages/login.html
@@ -3,9 +3,7 @@
 
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <meta name="google-signin-client_id" content="566769051678-k1mpvtssd5jin7p6bekdtv7g1r23qav4.apps.googleusercontent.com">
-
-<link rel="stylesheet" href="./css/login.css">
-<!-- <link rel="stylesheet" href="css/login.css" type="text/css"> -->
+<link rel="stylesheet" type="text/css" href="./css/login.css">
 <link href="https://fonts.googleapis.com/css?family=Neuton:800|Open+Sans:400,700" rel="stylesheet">
 
 <script src="./js/index.js"></script>
@@ -17,7 +15,7 @@
 
       <h1 class='heading'>Sign In</h1>
       <p>If you don't have a Google account, you can make one by clicking the button below.
-      </br> Or sign is as a
+      <br> Or sign is as a
       guest with the 'Sign in as Guest' button.</p>
       <div id="googlebutton" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark" data-width="250" data-height="50" data-longtitle="true"></div>
     </div>
@@ -30,9 +28,9 @@
         <h3 class='subheading'>About</h3>
         <p>This application is used to help musicians transcribe music from their instrument into a tablature format, using this easy-to-use web application, which
           also allows tab sheets to be saved, exported and shared with other accounts.
-        </br>This application will allow tab sheets to be transcribed, using a simple fret board to interact with to note down which keys are to be
+        <br>This application will allow tab sheets to be transcribed, using a simple fret board to interact with to note down which keys are to be
         played and when.
-      </br>Other features include a playback option, to ensure the sheet that has been written sounds just as the user would like.
+      <br>Other features include a playback option, to ensure the sheet that has been written sounds just as the user would like.
         <p>Please sign in to access the application and access all of its features.</p>
         </p>
         <h3 class='subheading'>Help</h3>
