menu up with working sign out button and welcome
name added to subheading, sign out button works

--- a/webpages/menu.html
+++ b/webpages/menu.html
@@ -7,15 +7,15 @@
 
 <main>
   <div id='logo'>
-    <h1>Tabify Logo Here</h1>
+    <h1>Tabify Logo Here MAYBE</h1>
   </div>
 
   <div id = 'mainform'>
-    <h1>Welcome, NAME, what would you like to do?</h1>
+    <h1><span id='greeting'></span></h1>
     <ul id='buttonlist'>
       <li><button>Create a new tab</button></li>
       <li><button>View/Modify an existing tab</button></li>
-      <li><button>Sign out</button></li>
+      <li><button onclick = "signOut();">Sign out</button></li>
     </ul>
   </div>
 
