development of main.html
including css file

--- a/webpages/menu.html
+++ b/webpages/menu.html
@@ -13,7 +13,7 @@
   <div id = 'mainform'>
     <h1><span id='greeting'></span></h1>
     <ul id='buttonlist'>
-      <li><button>Create a new tab</button></li>
+      <li><button onClick = "createTabBtn();">Create a new tab</button></li>
       <li><button>View/Modify an existing tab</button></li>
       <li><button onclick = "signOut();">Sign out</button></li>
     </ul>
