some functionalities added to main.html
minor changes, main grid done

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -4,18 +4,17 @@
 <link rel="stylesheet" href="./css/main.css">
 <link href="https://fonts.googleapis.com/css?family=Neuton:800|Open+Sans:400,700" rel="stylesheet">
 
-<main>
+<header>
+  <ul class="navmenu">
+    <li class = "navheader">Tabify<span id="greeting"></span></li>
+    <li><a href="#">Load</a></li>
+    <li><a href="#">Save</a></li>
+    <li><a href="#">Help</a></li>
+    <li><a href="#">Sign Out</a></li>
+  </ul>
+</header>
 
-  <header>
-    <ul class="navmenu">
-      <li class = "navheader">Tabify<span id="greeting"></span></li>
-      <li><a href="#">Load</a></li>
-      <li><a href="#">Save</a></li>
-      <li><a href="#">Help</a></li>
-      <li><a href="#">Sign Out</a></li>
-    </ul>
-  </header>
-
+<main class = "mainel">
   <div class="info">
     <h1>Create a Tab</h1>
     <p>Here is some information about what is going on down below...</p>
@@ -35,7 +34,7 @@
   </div>
 
   <div class="tabbox">
-    <p>This will have a grid in itself, fun...</p>
+    <p>Tab Box</p>
   </div>
 
 </main>
