start on fret table
beginning stages of fret board for tab creation

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -21,8 +21,72 @@
     <p>This will one day be filled up a bit, gonna have to do something about the width...</p>
   </div>
 
-  <div class="fretboard">
+  <div class = "fretboard">
     <p>Fret board box, insert image of fret board/table with buttons?</p>
+    <div class = "instrument">
+      <table cellpadding = "0" border = "0" class="htmlfrettable">
+        <tbody>
+          <tr style="background-color: rgs(255, 255, 255);">
+            <td></td>
+            <td class="numnode">0</td>
+            <td class="numnode">1</td>
+            <td class="numnode">2</td>
+            <td class="numnode">3</td>
+            <td class="numnode">4</td>
+            <td class="numnode">5</td>
+            <td class="numnode">6</td>
+            <td class="numnode">7</td>
+            <td class="numnode">8</td>
+            <td class="numnode">9</td>
+            <td class="numnode">10</td>
+            <td class="numnode">11</td>
+            <td class="numnode">12</td>
+            <td class="numnode">13</td>
+            <td class="numnode">14</td>
+            <td class="numnode">15</td>
+            <td class="numnode">17</td>
+            <td class="numnode">18</td>
+            <td class="numnode">19</td>
+            <td class="numnode">20</td>
+            <td class="numnode">21</td>
+            <td class="numnode">22</td>
+            <td class="numnode">23</td>
+          </tr>
+
+          <tr class="stringrow" id="1" style="display: table-row;">
+            <td class="tuningletter" pos="1">
+              <div id="stringnote1" pos="1" class="stringnote" onclick>E</div>
+            </td>
+
+            <td class="frettable" border="0">
+              <div id="10" title="E" class="frettablediv" onclick>
+                <div id="note10" i="1" j="0" class="notediv showscale"></div>
+                <div id="notetitle10" class="notetitle"></div>
+              </div>
+            </td>
+
+            <td class="frettable" border="0">
+              <div id="11" title="F" class="frettablediv" onclick>
+                <div id="note11" i="1" j="1" class="notediv showscale"></div>
+                <div id="notetitle11" class="notetitle"></div>
+              </div>
+            </td>
+
+            <td class="frettable" border="0">
+              <div id="12" title="F#" class="frettablediv" onclick>
+                <div id="note12" i="1" j="2" class="notediv showscale"></div>
+                <div id="notetitle12" class="notetitle"></div>
+              </div>
+            </td>
+
+          </tr>
+
+        </tbody>
+
+      </table>
+
+    </div>
+
   </div>
 
   <div class="fretoptions">
