tab sheet textarea added
not much functionality added

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -192,8 +192,8 @@
           <option>G#2</option>
           <option>A2</option>
           <option>A#2</option>
-          <option>B2</option>
-          <option selected = "selected">C3</option>
+          <option selected = "selected">B2</option>
+          <option>C3</option>
           <option>C#3</option>
           <option>D3</option>
           <option>D#3</option>
