click events for frets
added event listeners for all frets -> TEXTAREA

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" href="./css/main.css">
 <link href="https://fonts.googleapis.com/css?family=Neuton:800|Open+Sans:400,700" rel="stylesheet">
 
+<script src="./js/index.js"></script>
+
 <header>
   <ul class="navmenu">
     <li class = "navheader">Tabify<span id="greeting"></span></li>
@@ -129,7 +131,7 @@
         </select>
         </div>
         <!-- Divs for all frets on the fretboard - first row -->
-        <div class = "fret" data-string = "0" data-fret = "0"></div>
+        <div id="fret" class = "fret" data-string = "0" data-fret = "0"></div>
         <div class = "fret" data-string = "0" data-fret = "1"></div>
         <div class = "fret" data-string = "0" data-fret = "2"></div>
         <div class = "fret" data-string = "0" data-fret = "3"></div>
