--- a/webpages/menu.html
+++ b/webpages/menu.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="./css/menu.css">
 <link href="https://fonts.googleapis.com/css?family=Neuton:800|Open+Sans:400,700" rel="stylesheet">
 
+<script src="./js/index.js"></script>
+
 <main>
   <div id='logo'>
     <h1>Tabify Logo Here MAYBE</h1>
