--- a/webpages/main.html
+++ b/webpages/main.html
@@ -845,7 +845,17 @@
     </div>
 
     <div class = "tabContent">
-      <textarea name = "tabTextArea" rows = "16" cols = "100" class = "tabOutput" id = "tabOutput"></textarea>
+      <div class = "stave" id = "1">
+        <p class = "staveNo">Stave 1:</p>
+        </br>
+        <p class = "staveE">E|--</p>
+        <p class = "staveB">B|--</p>
+        <p class = "staveG">G|--</p>
+        <p class = "staveD">D|--</p>
+        <p class = "staveA">A|--</p>
+        <p class = "staveE">E|--</p>
+        <p></p>
+      </div>
     </div>
 
   </div>
