--- a/webpages/main.html
+++ b/webpages/main.html
@@ -840,10 +840,9 @@
     <div class = "staveoptions">
       <input type = "button" id = "newStave" value = "New Stave" title = "Add a new stave to the tab." name = "addStaveButton" onclick = "addStaveButton();">
 
-      <label>Select Stave:</label>
+      <label>Selected Stave:</label>
       <select id = "selectStave" name = "selectStave">
-        <option value = "0" selected>Stave 1</option>
-        <!-- MORE WILL BE ADDED AS STAVES CREATED -->
+        <!-- Options added as staves are created -->
       </select>
     </div>
 
