--- a/webpages/main.html
+++ b/webpages/main.html
@@ -867,8 +867,8 @@
     </div>
 
     <div class="taboptions">
-      <h3>SOME OPTIONS FAM</h3>
-      <input type = "button" id = "clearTab" value = "Clear Staves" title = "Clear all staves" name = "clearTabButton" onclick = "fillTabBox();">
+      <h3>SOME OPTIONS HERE</h3>
+      <input type = "button" id = "clearTab" value = "Delete Staves" title = "Clear all staves" name = "clearTabButton" onclick = "clearAllStaves();">
     </div>
 
   </div>
