--- a/webpages/main.html
+++ b/webpages/main.html
@@ -960,12 +960,12 @@
               <option>B7</option>
             </select>
 
+          <div class = "fret2" data-string = "0" data-fret = "x"></div>
           <div class = "fret2" data-string = "0" data-fret = "0"></div>
           <div class = "fret2" data-string = "0" data-fret = "1"></div>
           <div class = "fret2" data-string = "0" data-fret = "2"></div>
           <div class = "fret2" data-string = "0" data-fret = "3"></div>
           <div class = "fret2" data-string = "0" data-fret = "4"></div>
-          <div class = "fret2" data-string = "0" data-fret = "5"></div>
 
         </div>
 
@@ -1069,12 +1069,12 @@
               <option>B7</option>
             </select>
 
+          <div class = "fret2" data-string = "1" data-fret = "x"></div>
           <div class = "fret2" data-string = "1" data-fret = "0"></div>
           <div class = "fret2" data-string = "1" data-fret = "1"></div>
           <div class = "fret2" data-string = "1" data-fret = "2"></div>
           <div class = "fret2" data-string = "1" data-fret = "3"></div>
           <div class = "fret2" data-string = "1" data-fret = "4"></div>
-          <div class = "fret2" data-string = "1" data-fret = "5"></div>
 
         </div>
 
@@ -1178,12 +1178,12 @@
             <option>B7</option>
           </select>
 
+          <div class = "fret2" data-string = "2" data-fret = "x"></div>
           <div class = "fret2" data-string = "2" data-fret = "0"></div>
           <div class = "fret2" data-string = "2" data-fret = "1"></div>
           <div class = "fret2" data-string = "2" data-fret = "2"></div>
           <div class = "fret2" data-string = "2" data-fret = "3"></div>
           <div class = "fret2" data-string = "2" data-fret = "4"></div>
-          <div class = "fret2" data-string = "2" data-fret = "5"></div>
 
       </div>
 
@@ -1287,12 +1287,12 @@
             <option>B7</option>
           </select>
 
+          <div class = "fret2" data-string = "3" data-fret = "x"></div>
           <div class = "fret2" data-string = "3" data-fret = "0"></div>
           <div class = "fret2" data-string = "3" data-fret = "1"></div>
           <div class = "fret2" data-string = "3" data-fret = "2"></div>
           <div class = "fret2" data-string = "3" data-fret = "3"></div>
           <div class = "fret2" data-string = "3" data-fret = "4"></div>
-          <div class = "fret2" data-string = "3" data-fret = "5"></div>
 
         </div>
 
@@ -1396,12 +1396,12 @@
             <option>B7</option>
           </select>
 
+          <div class = "fret2" data-string = "4" data-fret = "x"></div>
           <div class = "fret2" data-string = "4" data-fret = "0"></div>
           <div class = "fret2" data-string = "4" data-fret = "1"></div>
           <div class = "fret2" data-string = "4" data-fret = "2"></div>
           <div class = "fret2" data-string = "4" data-fret = "3"></div>
           <div class = "fret2" data-string = "4" data-fret = "4"></div>
-          <div class = "fret2" data-string = "4" data-fret = "5"></div>
 
         </div>
 
@@ -1505,12 +1505,12 @@
             <option>B7</option>
           </select>
 
+          <div class = "fret2" data-string = "5" data-fret = "x"></div>
           <div class = "fret2" data-string = "5" data-fret = "0"></div>
           <div class = "fret2" data-string = "5" data-fret = "1"></div>
           <div class = "fret2" data-string = "5" data-fret = "2"></div>
           <div class = "fret2" data-string = "5" data-fret = "3"></div>
           <div class = "fret2" data-string = "5" data-fret = "4"></div>
-          <div class = "fret2" data-string = "5" data-fret = "5"></div>
 
         </div>
 
