Chord Creation Validation
Chord creation validates frets and name, succesfully allows "x" to be added to chord tab

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -854,7 +854,7 @@
       <input type="number" name="startPosition" id = "startPos" value="0" min = "0" max = "17" oninput = "changeStartPos();" onkeydown = "return false;">
       <br>
       <label>Chord Name:</label>
-      <input type="text" name="chordName">
+      <input type="text" name="chordName" id = "chName">
 
       <!-- CREATE A TABLE TO CREATE CHORDS -->
 
