Complete My Chords Functionality
Program clears entries when chord is created, resets chordFretboard, and adds chords to dropdown.
Able to select chords in dropdown after creating them.

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -843,7 +843,7 @@
             <select id = "selectMyChord" class = "chordDropdown" name="selectMyChord">
               <!-- to be filled by server -->
             </select>
-          <input type="button" id = "selectSavedChordBtn" value="Select" title = "Select a saved chord to add to tablature">
+          <input type="button" id = "selectSavedChordBtn" value="Select" title = "Select a saved chord to add to tablature" onclick = "selectMyChord();">
       </div>
     </div>
 
