minor html changes
changes to options html

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -29,103 +29,103 @@
         <div class = "fretFirstRow">
           <div class = "fretStringLegend">
             <select class = "tuningDropdown" data-current = "E4">
-          <option>C0</option>
-          <option>C#0</option>
-          <option>D0</option>
-          <option>D#0</option>
-          <option>E0</option>
-          <option>F0</option>
-          <option>F#0</option>
-          <option>G0</option>
-          <option>G#0</option>
-          <option>A0</option>
-          <option>A#0</option>
-          <option>B0</option>
-          <option>C1</option>
-          <option>C#1</option>
-          <option>D1</option>
-          <option>D#1</option>
-          <option>E1</option>
-          <option>F1</option>
-          <option>F#1</option>
-          <option>G1</option>
-          <option>G#1</option>
-          <option>A1</option>
-          <option>A#1</option>
-          <option>B1</option>
-          <option>C2</option>
-          <option>C#2</option>
-          <option>D2</option>
-          <option>D#2</option>
-          <option>E2</option>
-          <option>F2</option>
-          <option>F#2</option>
-          <option>G2</option>
-          <option>G#2</option>
-          <option>A2</option>
-          <option>A#2</option>
-          <option>B2</option>
-          <option>C3</option>
-          <option>C#3</option>
-          <option>D3</option>
-          <option>D#3</option>
-          <option>E3</option>
-          <option>F3</option>
-          <option>F#3</option>
-          <option>G3</option>
-          <option>G#3</option>
-          <option>A3</option>
-          <option>A#3</option>
-          <option>B3</option>
-          <option>C4</option>
-          <option>C#4</option>
-          <option>D4</option>
-          <option>D#4</option>
-          <option selected = "selected">E4</option>
-          <option>F4</option>
-          <option>F#4</option>
-          <option>G4</option>
-          <option>G#4</option>
-          <option>A4</option>
-          <option>A#4</option>
-          <option>B4</option>
-          <option>C5</option>
-          <option>C#5</option>
-          <option>D5</option>
-          <option>D#5</option>
-          <option>E5</option>
-          <option>F5</option>
-          <option>F#5</option>
-          <option>G5</option>
-          <option>G#5</option>
-          <option>A5</option>
-          <option>A#5</option>
-          <option>B5</option>
-          <option>C6</option>
-          <option>C#6</option>
-          <option>D6</option>
-          <option>D#6</option>
-          <option>E6</option>
-          <option>F6</option>
-          <option>F#6</option>
-          <option>G6</option>
-          <option>G#6</option>
-          <option>A6</option>
-          <option>A#6</option>
-          <option>B6</option>
-          <option>C7</option>
-          <option>C#7</option>
-          <option>D7</option>
-          <option>D#7</option>
-          <option>E7</option>
-          <option>F7</option>
-          <option>F#7</option>
-          <option>G7</option>
-          <option>G#7</option>
-          <option>A7</option>
-          <option>A#7</option>
-          <option>B7</option>
-        </select>
+              <option>C0</option>
+              <option>C#0</option>
+              <option>D0</option>
+              <option>D#0</option>
+              <option>E0</option>
+              <option>F0</option>
+              <option>F#0</option>
+              <option>G0</option>
+              <option>G#0</option>
+              <option>A0</option>
+              <option>A#0</option>
+              <option>B0</option>
+              <option>C1</option>
+              <option>C#1</option>
+              <option>D1</option>
+              <option>D#1</option>
+              <option>E1</option>
+              <option>F1</option>
+              <option>F#1</option>
+              <option>G1</option>
+              <option>G#1</option>
+              <option>A1</option>
+              <option>A#1</option>
+              <option>B1</option>
+              <option>C2</option>
+              <option>C#2</option>
+              <option>D2</option>
+              <option>D#2</option>
+              <option>E2</option>
+              <option>F2</option>
+              <option>F#2</option>
+              <option>G2</option>
+              <option>G#2</option>
+              <option>A2</option>
+              <option>A#2</option>
+              <option>B2</option>
+              <option>C3</option>
+              <option>C#3</option>
+              <option>D3</option>
+              <option>D#3</option>
+              <option>E3</option>
+              <option>F3</option>
+              <option>F#3</option>
+              <option>G3</option>
+              <option>G#3</option>
+              <option>A3</option>
+              <option>A#3</option>
+              <option>B3</option>
+              <option>C4</option>
+              <option>C#4</option>
+              <option>D4</option>
+              <option>D#4</option>
+              <option selected = "selected">E4</option>
+              <option>F4</option>
+              <option>F#4</option>
+              <option>G4</option>
+              <option>G#4</option>
+              <option>A4</option>
+              <option>A#4</option>
+              <option>B4</option>
+              <option>C5</option>
+              <option>C#5</option>
+              <option>D5</option>
+              <option>D#5</option>
+              <option>E5</option>
+              <option>F5</option>
+              <option>F#5</option>
+              <option>G5</option>
+              <option>G#5</option>
+              <option>A5</option>
+              <option>A#5</option>
+              <option>B5</option>
+              <option>C6</option>
+              <option>C#6</option>
+              <option>D6</option>
+              <option>D#6</option>
+              <option>E6</option>
+              <option>F6</option>
+              <option>F#6</option>
+              <option>G6</option>
+              <option>G#6</option>
+              <option>A6</option>
+              <option>A#6</option>
+              <option>B6</option>
+              <option>C7</option>
+              <option>C#7</option>
+              <option>D7</option>
+              <option>D#7</option>
+              <option>E7</option>
+              <option>F7</option>
+              <option>F#7</option>
+              <option>G7</option>
+              <option>G#7</option>
+              <option>A7</option>
+              <option>A#7</option>
+              <option>B7</option>
+            </select>
         </div>
         <!-- Divs for all frets on the fretboard - first row -->
         <div id="fret" class = "fret" data-string = "0" data-fret = "0"></div>
@@ -1541,13 +1541,13 @@
 
   <div class = "tabbox">
 
-    <div class="info">
+    <!-- <div class="info">
       <h3>Tab Information</h3>
       <label>Song Name:     </label>
       <input type = "text" id = "tab_name"></br>
       <label>Artist:        </label>
       <input type = "text" id = "tab_artist">
-    </div>
+    </div> -->
 
     <div class = "staveoptions">
 
@@ -1581,7 +1581,39 @@
     </div>
 
     <div class="taboptions">
-      <h3>SOME OPTIONS HERE</h3>
+
+      <h4>Tab Options and Symbols</h4>
+
+      <div class="block">
+        <label>Tab Spacing: </label>
+        <select class = "spacing" id = "tabSpacing" name = "selectTabSpacing">
+          <option value = "1">1</option>
+          <option value = "2">2</option>
+          <option value = "3">3</option>
+          <option value = "4">4</option>
+          <option value = "5">5</option>
+        </select>
+      </div>
+
+      <div class="block">
+        <label>Insert Spaces: </label>
+        <select class = "spacing" id = "insertSpace" name="insertSpace">
+          <option value = "1">1</option>
+          <option value = "2">2</option>
+          <option value = "3">3</option>
+          <option value = "4">4</option>
+          <option value = "5">5</option>
+          <option value = "6">6</option>
+          <option value = "7">7</option>
+          <option value = "8">8</option>
+          <option value = "9">9</option>
+        </select>
+      </div>
+
+      <div class="block">
+        <h5>Tab Symbols:</h5>
+      </div>
+
       <input type = "button" id = "clearTab" value = "Delete Staves" title = "Clear all staves" name = "clearTabButton" onclick = "clearAllStaves();">
     </div>
 
