General Tab Spacing functionality
Tab spacing works with both sized fret values, bit weird.

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -1588,7 +1588,7 @@
         <label>Tab Spacing: </label>
         <select class = "spacing" id = "tabSpacing" name = "selectTabSpacing">
           <option value = "1">1</option>
-          <option value = "2">2</option>
+          <option selected value = "2">2</option>
           <option value = "3">3</option>
           <option value = "4">4</option>
           <option value = "5">5</option>
@@ -1612,6 +1612,13 @@
 
       <div class="block">
         <h5>Tab Symbols:</h5>
+        <button type="button" name="Hammer On">h</button>
+        <button type="button" name="Bend">b</button>
+        <button type="button" name="Pull Off">p</button>
+        <button type="button" name="Hammer On">h</button>
+        <button type="button" name="Slide Up">/</button>
+        <button type="button" name="Slide Down">\</button>
+        <button type="button" name="Vibrato">~</button>
       </div>
 
       <input type = "button" id = "clearTab" value = "Delete Staves" title = "Clear all staves" name = "clearTabButton" onclick = "clearAllStaves();">
