--- a/webpages/main.html
+++ b/webpages/main.html
@@ -1608,6 +1608,7 @@
           <option value = "8">8</option>
           <option value = "9">9</option>
         </select>
+        <button type="button" name="insertSpaces" onclick = "insertBlanks()">Insert</button>
       </div>
 
       <div class="block">
